--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://connect-ed-backend-cvxs.onrender.com",
   "eslintConfig": {
     "extends": [
       "react-app",
